# conan-freetype

./: .gitignore  .travis.yml  CMakeLists.txt  FindFreetype.cmake  LICENSE.md  README.md  appveyor.yml  build.py  conanfile.py  freetype.pc.in
.ci/: install.sh
.travis/: install.sh
test_package/: CMakeLists.txt  conanfile.py  example.c  test_package.c  test_package.cpp
